syntax = "proto3";

package greeter;

// Generate proto stubs for Go backend (run this CLI in Repo Root level):
// "protoc --proto_path=proto   --go_out=go-backend/gen --go-grpc_out=go-backend/gen   proto/greeter.proto"

// We don't need to generate proto stubs for Node backend bc Node loads ".proto" dynamically.
option go_package = "./greeter;greeter";

service GreeterService {
  rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}
